--- a/detail.html
+++ b/detail.html
@@ -6,7 +6,7 @@
     <title>Main Page | ORION E-Commerce Fashion</title>
 
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- END STYLE CSS -->
 </head>
 <body>
