--- a/detail.html
+++ b/detail.html
@@ -15,17 +15,17 @@
     <nav class="navbar-top container">
         <a href="#register" class="navbar-link">
             Register
-            <img src="/assets/images/icon/register.svg" alt="Register Icon" width="14">
+            <img src="assets/images/icon/register.svg" alt="Register Icon" width="14">
         </a>
         <p>Free Shipping On Orders Over Us</p>
         <a href="#login" class="navbar-link">
             Login
-            <img src="/assets/images/icon/login.svg" alt="Login Icon" width="14">
+            <img src="assets/images/icon/login.svg" alt="Login Icon" width="14">
         </a>
     </nav>
     <nav class="navbar container">
         <a href="index.html" class="navbar-brand">
-            <img src="/assets/images/brand/logo-brand-dark.svg" alt="Brand Logo Dark" height="24">
+            <img src="assets/images/brand/logo-brand-dark.svg" alt="Brand Logo Dark" height="24">
         </a>
         <label class="hamburger" for="hamburger">
             <div class="hamburger-icon"></div>
@@ -258,13 +258,13 @@
         </ul>
         <ul class="navbar-link-image">
             <li class="link-image">
-                <img src="/assets/images/icon/like.svg" alt="Like Icon" width="15">
+                <img src="assets/images/icon/like.svg" alt="Like Icon" width="15">
             </li>
             <li class="link-image">
-                <img src="/assets/images/icon/cart.svg" alt="Cart Icon" width="15">
+                <img src="assets/images/icon/cart.svg" alt="Cart Icon" width="15">
             </li>
             <li class="link-image">
-                <img src="/assets/images/icon/search.svg" alt="Search Icon" width="15">
+                <img src="assets/images/icon/search.svg" alt="Search Icon" width="15">
             </li>
         </ul>
     </nav>
@@ -285,7 +285,7 @@
         <!-- SECTION DETAIL PRODUCT -->
         <section class="detail content-gap container">
             <div class="wrapper-image">
-                <img src="/assets/images/product/detail-product.jpg" alt="Detail Product" class="detail-product">
+                <img src="assets/images/product/detail-product.jpg" alt="Detail Product" class="detail-product">
             </div>
             <div class="detail-content">
                 <h5 class="detail-price">Rp 2,379,000</h5>
@@ -352,10 +352,10 @@
             <div class="section-content-4 content-gap">
                 <a href="detail.html" class="card-product">
                     <div class="wrapper-image">
-                        <img src="/assets/images/product/product-1.jpg" alt="Product Image">
+                        <img src="assets/images/product/product-1.jpg" alt="Product Image">
                         <div class="background-dark">
                             <div class="wrapper-arrow">
-                                <img src="/assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
+                                <img src="assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
                             </div>
                         </div>
                     </div>
@@ -366,10 +366,10 @@
                 </a>
                 <a href="detail.html" class="card-product">
                     <div class="wrapper-image">
-                        <img src="/assets/images/product/product-2.jpg" alt="Product Image">
+                        <img src="assets/images/product/product-2.jpg" alt="Product Image">
                         <div class="background-dark">
                             <div class="wrapper-arrow">
-                                <img src="/assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
+                                <img src="assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
                             </div>
                         </div>
                     </div>
@@ -380,10 +380,10 @@
                 </a>
                 <a href="detail.html" class="card-product">
                     <div class="wrapper-image">
-                        <img src="/assets/images/product/product-3.jpg" alt="Product Image">
+                        <img src="assets/images/product/product-3.jpg" alt="Product Image">
                         <div class="background-dark">
                             <div class="wrapper-arrow">
-                                <img src="/assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
+                                <img src="assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
                             </div>
                         </div>
                     </div>
@@ -394,10 +394,10 @@
                 </a>
                 <a href="detail.html" class="card-product">
                     <div class="wrapper-image">
-                        <img src="/assets/images/product/product-4.jpg" alt="Product Image">
+                        <img src="assets/images/product/product-4.jpg" alt="Product Image">
                         <div class="background-dark">
                             <div class="wrapper-arrow">
-                                <img src="/assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
+                                <img src="assets/images/icon/arrow-light.svg" alt="Arrow Icon" width="20">
                             </div>
                         </div>
                     </div>
@@ -432,17 +432,17 @@
     <!-- FOOTER -->
     <footer class="footer container" id="footer">
         <div class="footer-profile">
-            <img src="/assets/images/brand/logo-brand-light.svg" alt="Brand Logo" height="26">
+            <img src="assets/images/brand/logo-brand-light.svg" alt="Brand Logo" height="26">
             <p class="footer-caption">At Oreon, fashion is not just about clothing; it's a lifestyle. We believe in empowering individuals to express themselves through style.</p>
             <div class="footer-sosmed">
                 <a target="_blank" href="https://www.facebook.com/" class="sosmed-link">
-                    <img src="/assets/images/icon/facebook.svg" alt="Facebook Icon" width="16">
+                    <img src="assets/images/icon/facebook.svg" alt="Facebook Icon" width="16">
                 </a>
                 <a target="_blank" href="whatsapp://send?text=Hello&phone=+6281238484005" class="sosmed-link">
-                    <img src="/assets/images/icon/whatsapp.svg" alt="Whatsapp Icon" width="16">
+                    <img src="assets/images/icon/whatsapp.svg" alt="Whatsapp Icon" width="16">
                 </a>
                 <a target="_blank" href="https://twitter.com/?lang=id" class="sosmed-link">
-                    <img src="/assets/images/icon/twitter.svg" alt="Twitter Icon" width="16">
+                    <img src="assets/images/icon/twitter.svg" alt="Twitter Icon" width="16">
                 </a>
             </div>
         </div>
